--- a/start.html
+++ b/start.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h2> Iwas change the file</h2>
+    <h2> I was change the file</h2>
 <img src="img/girl-care-cow-.png" alt="">
+<p>
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit iusto praesentium voluptates aliquid beatae, tempore aspernatur vero dolore a, veniam quis nam. Perferendis officia tempore minus cumque mollitia dolor voluptatum, numquam molestiae magni voluptate delectus architecto dignissimos cupiditate sint iure nostrum earum quas quaerat non minima ab reprehenderit veniam! Iusto autem impedit possimus! Necessitatibus tempore mollitia distinctio adipisci earum aliquam eaque at quod tenetur, provident fugit quos reprehenderit sunt possimus nesciunt autem quia minima inventore vel cum pariatur. Dolorem aliquid ipsa harum repudiandae aut dolorum autem quisquam adipisci! Architecto, quos explicabo! Adipisci magnam minus deserunt animi ducimus et. Iste, nesciunt!
+</p>
 </body>
 </html>
